readable figures and edit selection data

--- a/analysis/adjudicated.ipynb
+++ b/analysis/adjudicated.ipynb
@@ -15,9 +15,9 @@
       "DEBUG:platform is win32\n",
       "DEBUG:CACHEDIR=C:\\Users\\heine\\.matplotlib\n",
       "DEBUG:Using fontManager instance from C:\\Users\\heine\\.matplotlib\\fontlist-v330.json\n",
-      "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
+      "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vinayak.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vinayak.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'rachel', 'ayush', 'vinayak', 'vishnesh'}\n",
+      "INFO:Found users: {'ayush', 'rachel', 'vishnesh', 'vinayak'}\n",
       "\n",
       "WARNING:rachel - Batch 1, HIT 1 (ID 420) has 3 deletion edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
       "WARNING:rachel - Batch 1, HIT 49 (ID 564) has 2 split edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
@@ -28,27 +28,30 @@
       "WARNING:rachel - Batch 2, HIT 311 (ID 931) has 4 substitution edits but 3 annotations. Likely a missing annotation. Skipping edit type...\n",
       "WARNING:rachel - Batch 2, HIT 321 (ID 961) has 9 substitution edits but 8 annotations. Likely a missing annotation. Skipping edit type...\n",
       "WARNING:rachel - Batch 2, HIT 373 (ID 1117) has 1 split edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:ayush - Batch 3, HIT 573 (ID 1363) has 3 reorder edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 3, HIT 579 (ID 1382) has 1 deletion edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 3, HIT 587 (ID 1406) has 1 structure edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:vinayak - Batch 3, HIT 488 (ID 1201) has 3 deletion edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:vinayak - Batch 3, HIT 488 (ID 1201) has 5 structure edits but 4 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:ayush - Batch 3, HIT 573 (ID 1455) has 3 reorder edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 3, HIT 579 (ID 1474) has 1 deletion edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 3, HIT 587 (ID 1498) has 1 structure edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
       "WARNING:Annotation doesnt exist for edit\n",
       "WARNING:Annotation doesnt exist for edit\n",
       "WARNING:Annotation doesnt exist for edit\n",
-      "WARNING:rachel - Batch 4, HIT 605 (ID 1460) has 5 substitution edits but 4 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 3, HIT 426 (ID 1518) has 1 deletion edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 3, HIT 475 (ID 1616) has 2 structure edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 3, HIT 479 (ID 1624) has 2 deletion edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 4, HIT 673 (ID 1795) has 1 split edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 4, HIT 675 (ID 1799) has 3 substitution edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 4, HIT 679 (ID 1807) has 4 substitution edits but 3 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 605 (ID 1552) has 5 substitution edits but 4 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 3, HIT 426 (ID 1635) has 1 deletion edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 3, HIT 475 (ID 1782) has 2 structure edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 3, HIT 479 (ID 1794) has 2 deletion edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 673 (ID 2017) has 1 split edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 675 (ID 2023) has 3 substitution edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 679 (ID 2035) has 4 substitution edits but 3 annotations. Likely a missing annotation. Skipping edit type...\n",
       "WARNING:Annotation doesnt exist for edit\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 2 deletion edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 4 substitution edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 1 split edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 3 reorder edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 1 structure edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 4, HIT 692 (ID 1833) has 5 deletion edits but 4 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 4, HIT 699 (ID 1847) has 1 insertion edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 2 deletion edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 4 substitution edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 1 split edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 3 reorder edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 1 structure edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:Annotation doesnt exist for edit\n",
+      "WARNING:rachel - Batch 4, HIT 692 (ID 2074) has 5 deletion edits but 4 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 699 (ID 2095) has 1 insertion edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
       "WARNING:No deletion annotation found. Skipping...\n",
       "DEBUG:Couldn't process grammar for deletion: ['bad', '', 'no', '']. Assuming 'no'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
@@ -97,7 +100,10 @@
       "DEBUG:Couldn't process grammar for deletion: ['good', 'somewhat', '']. Assuming 'no'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['negative', '', 'a lot', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process positive rating for substitution: ['negative', '', 'a lot', '']. Assuming 'somewhat'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['positive', 'somewhat', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process coreference error for deletion: ['bad', 'a lot', '', 'no']. Assuming 'no'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
       "DEBUG:Couldn't process positive rating for substitution: ['changes tense', '', 'positive', '', 'no']. Assuming 'somewhat'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
@@ -111,6 +117,7 @@
       "DEBUG:Couldn't process positive rating for substitution: ['changes clause', '', 'no', '', '']. Assuming 'somewhat'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['changes grammatical number', '', 'positive', 'minor', '']. Assuming 'no'...\n",
       "DEBUG:Couldn't process grammar for deletion: ['good', 'minor', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
@@ -158,6 +165,47 @@
     "data = load_data('../data/inspection_rating_annotated', preprocess=True, adjudicated=True)\n",
     "systems = set([x['system'] for x in data])\n",
     "edit_types = set(data[0]['annotations'].keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SimpEval Mean: 37.87, Std dev.: 12.73\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "s = [len(s['original'].split(' ')) for s in data]\n",
+    "print(f\"SimpEval Mean: {np.mean(s):.2f}, Std dev.: {np.std(s):.2f}\", )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ASSET Mean: 19.72, Std dev.: 7.95\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('C:\\\\Users\\\\heine\\\\Documents\\\\research\\\\ts-annotation-tool\\\\data\\\\tmp\\\\asset\\\\dataset\\\\asset.test.orig', 'r') as file:\n",
+    "    lines = file.readlines()\n",
+    "    text = ' '.join(lines)\n",
+    "    asset = text.split('\\n ')\n",
+    "s = [len(s.split(' ')) for s in asset]\n",
+    "print(f\"ASSET Mean: {np.mean(s):.2f}, Std dev.: {np.std(s):.2f}\", )"
    ]
   },
   {
