--- a/data/final-packaging.ipynb
+++ b/data/final-packaging.ipynb
@@ -26,7 +26,7 @@
       "DEBUG:Using fontManager instance from C:\\Users\\heine\\.matplotlib\\fontlist-v330.json\n",
       "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vinayak.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vinayak.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'vishnesh', 'vinayak', 'ayush', 'rachel'}\n",
+      "INFO:Found users: {'vishnesh', 'rachel', 'ayush', 'vinayak'}\n",
       "\n"
      ]
     },
@@ -34,21 +34,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "180: simpeval-22/T5-11B\n",
       "180: simpeval-22/Muss\n",
-      "180: simpeval-22/GPT-3-zero-shot\n",
+      "180: simpeval-22/Human-1-written\n",
       "180: simpeval-22/GPT-3-few-shot\n",
       "180: simpeval-22/Human-2-written\n",
+      "180: simpeval-22/T5-11B\n",
       "180: simpeval-22/T5-3B\n",
-      "180: simpeval-22/Human-1-written\n",
+      "180: simpeval-22/GPT-3-zero-shot\n",
       "\n",
-      "120: simpeval-ext/Human-2-written\n",
+      "120: simpeval-ext/T5-11B\n",
       "120: simpeval-ext/Muss\n",
-      "120: simpeval-ext/Human-1-written\n",
       "120: simpeval-ext/GPT-3-few-shot\n",
-      "120: simpeval-ext/GPT-3-zero-shot\n",
+      "120: simpeval-ext/Human-2-written\n",
       "120: simpeval-ext/T5-3B\n",
-      "120: simpeval-ext/T5-11B\n"
+      "120: simpeval-ext/Human-1-written\n",
+      "120: simpeval-ext/GPT-3-zero-shot\n"
      ]
     }
    ],
@@ -104,7 +104,7 @@
      "text": [
       "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vinayak.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vinayak.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'vishnesh', 'vinayak', 'ayush', 'rachel'}\n",
+      "INFO:Found users: {'vishnesh', 'rachel', 'ayush', 'vinayak'}\n",
       "\n",
       "WARNING:rachel - Batch 1, HIT 1 (ID 420) has 3 deletion edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
       "WARNING:rachel - Batch 1, HIT 49 (ID 564) has 2 split edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
@@ -293,13 +293,13 @@
    "source": [
     "def get_tag_values(tags, family_constraint=None):\n",
     "    # Recover word QE\n",
-    "    word_qe, word_ratings, edit_qe, edit_id = [], [], [], []\n",
+    "    word_qe, word_ratings, edit_qe, edit_id, word_qe_error_types = [], [], [], [], []\n",
     "    for tag in tags.keys():\n",
     "        ratings = [i for j in tags[tag].values() for i in j]\n",
     "        if family_constraint:\n",
     "            ratings = [ann for ann in ratings if ann['family'] == family_constraint]\n",
     "\n",
-    "        # whether each word is good/bad/ok, bad > good > ok\n",
+    "        # {GOOD, BAD, OK}, bad > good > ok\n",
     "        word_quality = 'ok'\n",
     "        if any([edit['word_qe'] == 'bad' for edit in ratings]):\n",
     "            word_quality = 'bad'\n",
@@ -307,16 +307,28 @@
     "            word_quality = 'good'\n",
     "        word_qe += [word_quality]\n",
     "\n",
-    "        # word rating, greater magnitude is king\n",
+    "        # {GOOD, BAD, BAD_CMPLX, BAD_DEL, OK}, bad > good > ok\n",
+    "        word_quality = 'ok'\n",
+    "        if any([edit['word_qe'] == 'bad' for edit in ratings]):\n",
+    "            word_quality = 'bad'\n",
+    "            if any([edit['error_type'] == Error.COMPLEX_WORDING for edit in ratings]):\n",
+    "                word_quality = 'bad_cmplx'\n",
+    "            elif any([edit['error_type'] == Error.BAD_DELETION for edit in ratings]):\n",
+    "                word_quality = 'bad_del'\n",
+    "        elif any([edit['word_qe'] == 'good' for edit in ratings]):\n",
+    "            word_quality = 'good'\n",
+    "        word_qe_error_types += [word_quality]\n",
+    "\n",
+    "        # [-3, 3], greater magnitude takes prioirty\n",
     "        word_rating = 0\n",
     "        if len(ratings) != 0:\n",
     "            word_rating = max([edit['word_rating'] for edit in ratings if edit['word_rating'] is not None] + [0], key=abs)\n",
     "        word_ratings += [word_rating]\n",
     "\n",
-    "        # whether edit exists, edit > no edit\n",
+    "        # {EDIT, NO EDIT}, edit > no edit\n",
     "        edit_qe += ['edit' if any([edit['edit_qe'] for edit in ratings]) else 'noedit']\n",
     "\n",
-    "        # whether each word is bad/ok, bad > ok\n",
+    "        # {BAD, OK}, bad > ok\n",
     "        word_id = 'ok'\n",
     "        if any([edit['word_qe'] == 'bad' for edit in ratings]):\n",
     "            word_id = 'bad'\n",
@@ -325,7 +337,38 @@
     "        'word_qe': word_qe, \n",
     "        'word_ratings': word_ratings, \n",
     "        'edit_qe': edit_qe,\n",
-    "        'edit_id': edit_id\n",
+    "        'edit_id': edit_id,\n",
+    "\n",
+    "        'word_qe_error_types': word_qe_error_types\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tag_priority = ['substitution', 'insertion', 'deletion'] # last values are high priority\n",
+    "tag_map = {\n",
+    "    'substitution': 'sub',\n",
+    "    'insertion': 'ins',\n",
+    "    'deletion': 'del',\n",
+    "    None: 'ok'\n",
+    "}\n",
+    "def get_edit_values(tags):\n",
+    "    edit_types = []\n",
+    "\n",
+    "    for tag in tags.keys():\n",
+    "        tag_edit_types = list(tags[tag].keys())\n",
+    "        added_tag = None\n",
+    "        for t in tag_priority:\n",
+    "            if t in tag_edit_types:\n",
+    "                added_tag = t\n",
+    "        edit_types += [tag_map[added_tag]]\n",
+    "\n",
+    "    return {\n",
+    "        'edit_types': edit_types\n",
     "    }"
    ]
   },
@@ -382,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,25 +482,59 @@
     "\n",
     "            for tag_type, tag_value in tags_by_type.items():\n",
     "                tag_value = write_tagged_sentence(sent[sentence_type], tags, tag_value)\n",
-    "\n",
-    "                if tag_type == 'word_qe' or tag_type == 'edit_id':  \n",
-    "                    tag_value = tag_value.replace('<ok>', '')\\\n",
-    "                        .replace('</ok>', '')\n",
-    "                elif tag_type == 'edit_qe':\n",
-    "                    tag_value = tag_value.replace('<noedit>', '')\\\n",
-    "                       .replace('</noedit>', '')\n",
+    "                \n",
+    "                tag_value = tag_value.replace('<ok>', '')\\\n",
+    "                    .replace('</ok>', '').replace('<noedit>', '')\\\n",
+    "                    .replace('</noedit>', '')\n",
     "            \n",
     "                fam_name = f'_{Family.CONTENT.value.lower()}' if family_constraint is not None else ''\n",
     "                entry.update({\n",
     "                    f'{tag_type}_{sentence_type}{fam_name}': tag_value\n",
     "                })\n",
+    "    \n",
+    "    # Generate edit type tagging\n",
+    "    for sentence_type in ['original', 'simplified']:\n",
+    "        tags = get_annotations_per_token([sent], sentence_type, collapse_composite=True, remove_reorder=True, remove_none=False)\n",
+    "        tags_by_type = get_edit_values(tags)\n",
+    "\n",
+    "        for tag_type, tag_value in tags_by_type.items():\n",
+    "            tag_value = write_tagged_sentence(sent[sentence_type], tags, tag_value)\n",
+    "\n",
+    "            tag_value = tag_value.replace('<ok>', '').replace('</ok>', '')\n",
+    "        \n",
+    "            entry.update({\n",
+    "                f'{tag_type}_{sentence_type}': tag_value\n",
+    "            })\n",
     "\n",
     "    out_file += [entry]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\textit{13057} & \\textit{628} & \\textit{449} & \\textit{1901}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get number of edit types\n",
+    "edits = [i for j in [s['processed_annotations'] for s in data] for i in j]\n",
+    "num_error = sum([e['error_type'] is not None for e in edits])\n",
+    "num_complex = sum([e['error_type'] == Error.COMPLEX_WORDING for e in edits])\n",
+    "num_bad_del = sum([e['error_type'] == Error.BAD_DELETION for e in edits])\n",
+    "num_quality = len(edits) - num_error\n",
+    "print(\"\\\\textit{\" + str(num_quality) + \"} & \\\\textit{\" + str(num_bad_del) + \"} & \\\\textit{\" + str(num_complex) + \"} & \\\\textit{\" + str(num_error) + \"}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
