add test set selection

--- a/data/injestion.ipynb
+++ b/data/injestion.ipynb
@@ -200,16 +200,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:Loading files: ['test_set_annotated/batch_1_ayush.json', 'test_set_annotated/batch_1_rachel.json', 'test_set_annotated/batch_1_vinayak.json', 'test_set_annotated/batch_1_vishnesh.json', 'test_set_annotated/batch_2_ayush.json', 'test_set_annotated/batch_2_rachel.json', 'test_set_annotated/batch_2_vinayak.json', 'test_set_annotated/batch_2_vishnesh.json']\n",
+      "\n",
+      "INFO:Found users: {'vishnesh', 'ayush', 'vinayak', 'rachel'}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "data = simpeval_22 + simpeval_ext"
+    "# data = simpeval_22 + simpeval_extimport sys\n",
+    "\n",
+    "sys.path.append('../analysis')\n",
+    "from utils.all import *\n",
+    "data = load_data('test_set_annotated', preprocess=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +294,7 @@
     "                if end_idx >= len(interwoven[i]):\n",
     "                    end_idx = len(interwoven[i])\n",
     "\n",
-    "                path = f\"inspection/{user}/batch_{j+1}\"\n",
+    "                path = f\"test_set_inspection/{user}/batch_{j+1}\"\n",
     "                if not os.path.exists(path):\n",
     "                    os.makedirs(path)\n",
     "                with open(f'{path}/set_{i}.json', \"w\") as f:\n",
@@ -293,17 +308,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vinayak: 170\n",
-      "ayush: 187\n",
-      "rachel: 172\n",
-      "vishnesh: 171\n"
+      "ayush: 36\n",
+      "vishnesh: 34\n",
+      "rachel: 36\n",
+      "vinayak: 34\n"
      ]
     }
    ],
@@ -337,8 +352,8 @@
     "            new_list += [sentence_id]\n",
     "    not_annotated_sent_id_by_user[user] = new_list\n",
     "\n",
-    "del not_annotated_sent_id_by_user['anton']\n",
-    "del not_annotated_sent_id_by_user['kelly']\n",
+    "# del not_annotated_sent_id_by_user['anton']\n",
+    "# del not_annotated_sent_id_by_user['kelly']\n",
     "\n",
     "import random\n",
     "\n",
@@ -362,7 +377,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
