starting work on alignment dataloader

--- a/data/final-packaging.ipynb
+++ b/data/final-packaging.ipynb
@@ -570,6 +570,101 @@
     "write_csv('salsa/lens-salsa-training/train.csv', [s for s in out_file if s['src'] in src_sents_train])\n",
     "write_csv('salsa/lens-salsa-training/valid.csv', [s for s in out_file if s['src'] in src_sents_val])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Write data in word alignment format to .tsv\n",
+    "\"\"\"\n",
+    "def write_tsv_align(file_path, data):\n",
+    "    align_out = []\n",
+    "    for i, s in enumerate(data):\n",
+    "        align_out += [[\n",
+    "            f'{i}:{i}',\n",
+    "            s['src'],\n",
+    "            'N/A',\n",
+    "            s['mt'],\n",
+    "            'N/A', '1', '1',\n",
+    "            s['alignment'],\n",
+    "            'N/A',\n",
+    "        ]]\n",
+    "\n",
+    "    with open(file_path, \"w\") as f:\n",
+    "        for r in align_out:\n",
+    "            f.write(f\"{\"\\t\".join(r)}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_tsv_align('salsa/lens-salsa-training/train-align.tsv', [s for s in out_file if s['src'] in src_sents_train])\n",
+    "write_tsv_align('salsa/lens-salsa-training/valid-align.tsv', [s for s in out_file if s['src'] in src_sents_val])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You may need to tokenize by punctuation as well? But for now only by spaces\n",
+    "\n",
+    "# Each word is aligned in the format C-S, if the alignment doesn't exist, it implies\n",
+    "# a deletion or insertion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To create data format for Neural Janaca, it works a bit different. Here's some example\n",
+    "# data:\n",
+    "\n",
+    "# It exists in this format: ID, sent1, _, sent2, _, _, _, sure_align, poss_align\n",
+    "# Important to note tokenization is performed via spaces\n",
+    "\n",
+    "# sure_align = sure alignments\n",
+    "# poss_align = possible alignments\n",
+    "# In Chao's paper, he uses sure+poss as the default evaluation setup.\n",
+    "\n",
+    "# 0:0\n",
+    "# Today there are only around 20,000 wild lions left in the world .\n",
+    "# N/A\n",
+    "# By one estimate , fewer than 20,000 lions exist in the wild , a drop of about 40 percent in the past two decades .\n",
+    "# N/A\n",
+    "# 1\n",
+    "# 1\n",
+    "# 5-6 6-11 7-7 8-8 9-9 10-10 12-24\n",
+    "# 0-0 0-1 0-2 3-4 3-5 4-4 4-5\n",
+    "\n",
+    "# 1:1\n",
+    "# Other experts say there is little proof that grass-fed beef is healthier .\n",
+    "# N/A\n",
+    "# \" There 's little definitive data to suggest grass-fed beef is healthier for you , \" said Chad Carr , an associate professor in the university 's department of animal sciences .\n",
+    "# N/A\n",
+    "# 1\n",
+    "# 1\n",
+    "# 2-16 3-1 4-2 5-3 6-4 6-5 8-8 9-9 10-10 11-11 12-31\n",
+    "# 1-17 1-18 7-6 7-7\n",
+    "\n",
+    "# 2:2\n",
+    "# Lindsey Carillo , 31 , grew up in a suburb but wanted to expose her kids to city life .\n",
+    "# N/A\n",
+    "# Lindsey Carillo , 31 , grew up in a suburb of Detroit but wanted to expose her kids to city living .\n",
+    "# N/A\n",
+    "# 1\n",
+    "# 1\n",
+    "# 0-0 1-1 2-2 3-3 4-4 5-5 6-6 7-7 8-8 9-9 10-12 11-13 12-14 13-15 14-16 15-17 16-18 17-19 18-20 19-21"
+   ]
   }
  ],
  "metadata": {
