--- a/data/inspection-to-rating.ipynb
+++ b/data/inspection-to-rating.ipynb
@@ -26,27 +26,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:Loading files: ['inspection_annotated/batch_1_ayush.json', 'inspection_annotated/batch_1_rachel.json', 'inspection_annotated/batch_1_vinayak.json', 'inspection_annotated/batch_1_vishnesh.json', 'inspection_annotated/batch_2_ayush.json', 'inspection_annotated/batch_2_rachel.json', 'inspection_annotated/batch_2_vinayak.json', 'inspection_annotated/batch_2_vishnesh.json']\n",
+      "INFO:Loading files: ['test_set_inspection_annotated/batch_1_ayush.json', 'test_set_inspection_annotated/batch_1_rachel.json', 'test_set_inspection_annotated/batch_1_vinayak.json', 'test_set_inspection_annotated/batch_1_vishnesh.json', 'test_set_inspection_annotated/batch_2_ayush.json', 'test_set_inspection_annotated/batch_2_rachel.json', 'test_set_inspection_annotated/batch_2_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'rachel', 'ayush', 'vinayak', 'vishnesh'}\n",
+      "INFO:Found users: {'vinayak', 'ayush', 'rachel', 'vishnesh'}\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "data = load_data('inspection_annotated')"
+    "data = load_data('test_set_inspection_annotated')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For now we only want batch 1\n",
+    "data = [s for s in data if s['batch'] == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,17 +79,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Should assign 85 per annotator if we are assigning equally"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rachel: 528\n",
-      "ayush: 513\n",
-      "vinayak: 530\n",
-      "vishnesh: 529\n"
+      "vinayak: 150\n",
+      "ayush: 120\n",
+      "rachel: 120\n",
+      "vishnesh: 120\n"
      ]
     }
    ],
