fix inspection data

--- a/data/injestion.ipynb
+++ b/data/injestion.ipynb
@@ -2,22 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:matplotlib data path: C:\\Users\\heine\\AppData\\Roaming\\Python\\Python39\\site-packages\\matplotlib\\mpl-data\n",
-      "DEBUG:CONFIGDIR=C:\\Users\\heine\\.matplotlib\n",
-      "DEBUG:interactive is False\n",
-      "DEBUG:platform is win32\n",
-      "DEBUG:CACHEDIR=C:\\Users\\heine\\.matplotlib\n",
-      "DEBUG:Using fontManager instance from C:\\Users\\heine\\.matplotlib\\fontlist-v330.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import copy\n",
@@ -27,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,16 +187,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "DEBUG:matplotlib data path: C:\\Users\\heine\\AppData\\Roaming\\Python\\Python39\\site-packages\\matplotlib\\mpl-data\n",
+      "DEBUG:CONFIGDIR=C:\\Users\\heine\\.matplotlib\n",
+      "DEBUG:interactive is False\n",
+      "DEBUG:platform is win32\n",
+      "DEBUG:CACHEDIR=C:\\Users\\heine\\.matplotlib\n",
+      "DEBUG:Using fontManager instance from C:\\Users\\heine\\.matplotlib\\fontlist-v330.json\n",
       "INFO:Loading files: ['test_set_annotated/batch_1_ayush.json', 'test_set_annotated/batch_1_rachel.json', 'test_set_annotated/batch_1_vinayak.json', 'test_set_annotated/batch_1_vishnesh.json', 'test_set_annotated/batch_2_ayush.json', 'test_set_annotated/batch_2_rachel.json', 'test_set_annotated/batch_2_vinayak.json', 'test_set_annotated/batch_2_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'vishnesh', 'ayush', 'vinayak', 'rachel'}\n",
+      "INFO:Found users: {'vinayak', 'ayush', 'rachel', 'vishnesh'}\n",
       "\n"
      ]
     }
@@ -217,6 +210,7 @@
    "source": [
     "# data = simpeval_22 + simpeval_extimport sys\n",
     "\n",
+    "import sys\n",
     "sys.path.append('../analysis')\n",
     "from utils.all import *\n",
     "data = load_data('test_set_annotated', preprocess=False)"
@@ -224,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,9 +247,9 @@
     "        delete_annotations(sents)\n",
     "\n",
     "        if len(sents) == 1:\n",
-    "            sents += [[], []]\n",
+    "            sents = [[]] + sents + [[]]\n",
     "        elif len(sents) == 2:\n",
-    "            sents += [[]]\n",
+    "            sents = [[]] + sents\n",
     "        \n",
     "        for i, s in enumerate(sents):\n",
     "            if i not in interwoven:\n",
@@ -283,6 +277,17 @@
     "    else:\n",
     "        interwoven = interweave(data, user=user)\n",
     "\n",
+    "    # TEMP\n",
+    "    for i, c in interwoven.items():\n",
+    "        print(f'{i}: {len(c)}')\n",
+    "    empty = copy.deepcopy(interwoven[1])\n",
+    "    for s in empty:\n",
+    "        s['original_spans'] = []\n",
+    "        s['simplified_spans'] = []\n",
+    "        s['user'] = ''\n",
+    "    interwoven[2] = copy.deepcopy(interwoven[0])\n",
+    "    interwoven[0] = empty\n",
+    "\n",
     "    path = f\"inspection\"\n",
     "    if user is not None:\n",
     "        path += f\"/{user}\" \n",
@@ -308,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -377,19 +382,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: 36\n",
+      "1: 36\n",
+      "0: 34\n",
+      "1: 34\n",
+      "0: 36\n",
+      "1: 36\n",
+      "0: 34\n",
+      "1: 34\n"
+     ]
+    }
+   ],
    "source": [
     "# All annotators annotated ~350 sentences\n",
     "# Assign one of those sentences to each annotator - around 117 sentences per annotator. Split into 2 batches\n",
@@ -400,7 +410,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interwoven = interweave(data, user='ayush')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set 1 should be sentences w/ no edits\n",
+    "# Set 2 and 3 sentences with edits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
